--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,21 @@ html {
   font: normal 100%/1.5 Georgia, serif;
   line-height: 1.5;
   box-sizing: border-box;
+  background-color: #ffe500;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 body {
   margin: 0;
+  background-color: #fff;
 }
 
 header {
+  padding-bottom: .3em;
   background-color: #ffe500;
-  padding: 0 .75em;
 }
 
 h1 {
@@ -27,6 +33,7 @@ h1 {
   text-align: center;
   padding: 0;
   font-size: 1.125rem;
+  display: block;
 }
 
 .nav li {
@@ -40,49 +47,46 @@ h1 {
   background-color: #b2a212;
   border-radius: 4px;
   text-decoration: none;
-  margin: .3em;
 }
 
 .nav a:hover {
+  background-color: #cc1465;
+}
+
+.nav .current {
   background-color: #b20953;
-}
-
-.nav a::after {
-  background-color: #b2a212;
-}
-
-.nav a::selection {
-  background-color: #b20953;
-}
-
-.nav a:active {
-  background-color: #b2a212;
-}
-
-.nav a::before {
-  background-color: #b2a212;
 }
 
 h2 {
   font-family: "Sigmar One";
   font-size: 1.875rem;
-  color: #cc1465;
-  margin: .5em;
+  color: #b20953;
+  padding-left: .3em;
 }
 
 img {
   display: block;
   width: 100%;
+  padding: 0 .75em;
 }
 
 footer {
   background-color: #ffe500;
-  padding: 0.2em;
+  padding: 1em;
   text-align: center;
+  font-size: .75rem;
 }
 
 article {
-  margin: .3em;
-  padding: .2em .5em .3em;
   color: #2f2d13;
+  margin-top: 1.5rem;
+}
+
+main {
+  display: inline-block;
+  margin: .3em;
+}
+
+p {
+  padding-left: .5em;
 }
